Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-18674

assertion when running compaction on a sherlock fdb file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Critical
    • 4.5.0
    • 4.5.0
    • forestdb
    • None
    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      1) Generate a forestdb index file from a sherlock build
      2) Copy the sherlock forestdb file to watson (under ns_server/data/n_0/data through cluster_run)
      3) Bring up the watson server
      4) Indexer is able to read the sherlock fdb file (see file format as ForestDB v1.x format)
      5) hen indexer tries to compact the file, I run into a fdb assertion as follow (see below).

      2016-03-10T17:18:00.574-08:00 [Info] Indexer::initPartnInstance Initialized Partition:
      Index: 3596062478303614404 Partition: PartitionId: 0 Endpoints: [:9105]
      2016-03-10T17:18:00.575-08:00 [Info] NewForestDBSlice(): file version ForestDB v1.x format
      2016-03-10T17:18:00.576-08:00 [Info] ForestDBSlice:NewForestDBSlice Created New Slice Id 0 IndexInstId 3596062478303614404 WriterThreads 1
      2016-03-10T17:18:00.576-08:00 [Info] Indexer::initPartnInstance Initialized Slice:
      Index: 3596062478303614404 Slice: SliceId: 0 File: /users/jliang/documents/eclipse/watson/watson/ns_server/data/n_0/data/@2i/default_company_3596062478303614404_0.index Index: 3596062478303614404
      2016-03-10T17:18:00.577-08:00 [Info] Indexer: Storage Mode Set As forestdb
      ...
      2016-03-10T17:18:01.625-08:00 [Warn] Compacting index due to upgrade
      2016-03-10T17:18:01.636-08:00 [Info] ForestDBSlice::Compact Compacting upto SeqNum 119471. Slice Id 0, IndexInstId 3596062478303614404, IndexDefnId 3596062478303614404
      Assertion failed: (aa), function fdb_kvs_header_copy, file /Users/jliang/Documents/eclipse/watson/watson/forestdb/src/kv_instance.cc, line 662.
      SIGABRT: abort
      PC=0x7fff8bf13866 m=13
      signal arrived during cgo execution

      goroutine 105 [syscall, locked to thread]:
      runtime.cgocall(0x48532c0, 0xc823653b60, 0x0)
      /Users/jliang/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/cgocall.go:123 +0x11b fp=0xc823653b10 sp=0xc823653ae0
      github.com/couchbase/indexing/secondary/fdb._Cfunc_fdb_compact_upto(0x1801a030, 0x18015500, 0x2b47, 0x0)
      ??:0 +0x41 fp=0xc823653b60 sp=0xc823653b10
      github.com/couchbase/indexing/secondary/fdb.(*File).CompactUpto(0xc82325bc80, 0xc8201ccb80, 0x80, 0xc8232255f8, 0x0, 0x0)
      /Users/jliang/Documents/eclipse/watson/watson/goproj/src/github.com/couchbase/indexing/secondary/fdb/file.go:113 +0x32d fp=0xc823653bf0 sp=0xc823653b60
      github.com/couchbase/indexing/secondary/indexer.(*fdbSlice).Compact(0xc820202280, 0x0, 0x0)
      /Users/jliang/Documents/eclipse/watson/watson/goproj/src/github.com/couchbase/indexing/secondary/indexer/forestdb_slice_writer.go:1265 +0x107b fp=0xc823653ee0 sp=0xc823653bf0
      github.com/couchbase/indexing/secondary/indexer.(*storageMgr).handleIndexCompaction.func1(0xc823327f60, 0x1, 0x1, 0xc8232dca80)
      /Users/jliang/Documents/eclipse/watson/watson/goproj/src/github.com/couchbase/indexing/secondary/indexer/storage_manager.go:848 +0x9a fp=0xc823653f70 sp=0xc823653ee0
      runtime.goexit()
      /Users/jliang/.cbdepscache/exploded/x86_64/go-1.6/go/src/runtime/asm_amd64.s:1998 +0x1 fp=0xc823653f78 sp=0xc823653f70
      created by github.com/couchbase/indexing/secondary/indexer.(*storageMgr).handleIndexCompaction
      /Users/jliang/Documents/eclipse/watson/watson/goproj/src/github.com/couchbase/indexing/secondary/indexer/storage_manager.go:857 +0x485

      goroutine 1 [select]:
      github.com/couchbase/indexing/secondary/indexer.(*indexer).run(0xc8201b58c0)
      /Users/jliang/Documents/eclipse/watson/watson/goproj/src/github.com/couchbase/indexing/secondary/indexer/indexer.go:444 +0x292
      github.com/couchbase/indexing/secondary/indexer.NewIndexer(0xc820140a50, 0x0, 0x0, 0x0, 0x0)
      /Users/jliang/Documents/eclipse/watson/watson/goproj/src/github.com/couchbase/indexing/secondary/indexer/indexer.go:330 +0x393f
      main.main()
      /Users/jliang/Documents/eclipse/watson/watson/goproj/src/github.com/couchbase/indexing/secondary/cmd/indexer/main.go:100 +0x1374

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              jung-sang Jung-Sang Ahn (Inactive)
              jliang John Liang
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty