MB-18674 Tolerate false alarms for ForestDB v1.x files

- If a document length structure is written over two blocks, we may
get a false alarm if the rest of the first block was simply skipped
and the next document began from the beginning of the second block.

- There can be also garbage (allocated but not written) blocks in old
files. We should tolerate them instead of compaction failure.

Change-Id: I5157bde50b45a802d81266acc99b10ed6d640870